[package]
name = "spl-token-names"
description = "A well-known token list on Solana blockchain"
version = "0.2.0"
authors = ["Guanqun Lu <guanqun.lu@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/guanqun/spl-token-names"

[dependencies]
serde = { version = "1.0.133"}
serde_derive = { version = "1.0.133"}